# Janus

./: .dockerignore  .env.example  .gitignore  .venv  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  README.md  STRIX-AUDIT.md  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  todo.md
.demo-data/: config.yaml  janus.db
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
api-reference/: index.html
architecture/: index.html
budgets/: index.html
changelog/: index.html
cli/: index.html
client-setup/: index.html
combos/: index.html
configuration/: index.html
contributing/: index.html
dashboard/: index.html
deployment/: index.html
docs/: api-reference.md  architecture.md  budgets.md  changelog.md  cli.md  client-setup.md  combos.md  configuration.md  contributing.md  dashboard.md  deployment.md  getting-started.md  index.md  inventory.md  providers.md  token-savers.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-24-janus-phase1-core-router.md  2026-06-24-janus-phase2-fallback-combos.md  2026-06-24-janus-phase3-token-savers.md  2026-06-24-janus-phase4-sqlite-persistence.md  2026-06-24-janus-phase5-dashboard.md  2026-06-25-dashboard-crud.md  2026-06-25-docs-packaging.md  2026-06-25-phase6-quota-usage-analytics.md  2026-06-25-phase7-deployment.md  2026-07-08-phase1-translation-fidelity.md  2026-07-08-phase2-account-architecture.md  2026-07-09-client-compat-polish.md  (+2 more)
getting-started/: index.html
inventory/: index.html
providers/: index.html
scripts/: debug_tool_loop.py  generate_model_catalog.py  migrate_dashboard_export.py  seed_openrouter_pricing.py
search/: search_index.json
src/janus/: __main__.py  app.py  catalog.py  cli.py  settings.py
tests/fixtures/: anthropic_message_request.json  anthropic_stream.txt  anthropic_thinking_stream.txt  gemini_request.json  openai_chat_request.json  openai_nonstream_response.json  openai_stream.txt  usage_seed.py
tests/integration/: test_api.py  test_auth.py  test_backoff_escalation.py  test_budget_enforcement.py  test_caveman_levels.py  test_cost_recording.py  test_dashboard.py  test_dashboard_crud.py  test_deepseek_aliases.py  test_fusion.py  test_gateway_rate_limit.py  test_github_copilot.py  test_headroom.py  test_inventory_dashboard.py  test_inventory_push.py  test_ollama_api.py  test_openrouter_headers.py  test_passthrough_transports.py  test_per_model_cooldown_e2e.py  test_pricing_dashboard.py  test_provider_matrix.py  test_quota_tracking.py  test_reasoning_e2e.py  test_request_logging.py  test_responses_api.py  test_stream_fallback.py  test_upstream_routing.py  test_yaml_migration.py
tests/unit/: test_auth.py  test_catalog.py  test_cli.py
token-savers/: index.html
(+276 files in other folders)
