[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janus-ai"
version = "1.1.0"
description = "The two-faced AI routing gateway"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "tiktoken>=0.7.0",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/amanverasia/Janus"
Documentation = "https://amanverasia.github.io/Janus/"
Repository = "https://github.com/amanverasia/Janus"
Issues = "https://github.com/amanverasia/Janus/issues"

[project.scripts]
janus = "janus.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5.0",
    "mkdocs-material>=9.5",
    "build>=1.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/janus"]
